# crawl-data-project

./: .gitignore  README.md  crawl_luongthangnet.py  luongthang.net_webapp.py  pyproject.toml  requirements.txt
templates/: index.html
