[tool.poetry]
name = "crawl-data-project"
version = "0.1.0"
description = ""
authors = ["kngan <kngan.thai79@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
requests = "^2.31.0"
gspread = "^6.1.0"
apiclient = "^1.0.4"
oauth2client = "^4.1.3"
google-api-python-client = "^2.127.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
